# zooid-cmpst

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  _CoqProject  run.sh
.circleci/: config.yml
attic/: Env.v
attic/theories/: Atom.v  Env2.v  Proc.v  Syntax.v
doc/: Tutorial.html  coding_guidelines.md
doc/Coq_dependencies/: dependencies.tex  guide.tex
doc/challenge/: auth.nuscr
docker/: Dockerfile  buildImage.sh  saveImage.sh
examples/: readme.txt
notes/: CollaboratorManual.md  DocumentingMerge.md  diagram.tex
runtime/: .ocamlformat  dune-project
runtime/examples/calculator/: calcc.ml  calcc2.ml  calcsvr.ml  dune
runtime/examples/calculator/calculatorlib/: calculator.ml
runtime/examples/pingpong/: dune  ppc0.ml  ppc1.ml  ppc2.ml  ppc3.ml  ppc4.ml  ppsvr.ml
runtime/examples/pipeline/: common.ml  dune  main.ml  malice.ml  mbob.ml  mcarol.ml
runtime/examples/pipeline/pipelineLib/: dune  implementation.ml
runtime/examples/twobuyer/: buyerA.ml  buyerB.ml  dune  seller.ml
runtime/examples/twobuyer/twobuyerlib/: dune  implementation.ml
runtime/experiments/: fcm.ml  puzzle.ml
runtime/lib/: comm.ml  log.ml
scripts/: buildall.sh  nums.sh  runCalculator.sh  runExamples.sh  runPingPong0.sh  runPingPong1.sh  runPingPong2.sh  runPingPong3.sh  runPingPong4.sh  runPipeline.sh  runTwoBuyer.sh  updateDeprecated.sh
theories/: Actions.v  Atom.v  AtomScopes.v  AtomSets.v  Code.v  Common.v  Env.v  Examples.v  Global.v  LNVar.v  Local.v  OldEnv.v  Proc.v  Proc2.v  ProcCo.v  ProcIndLoop.v  Projection.v  QProjection.v  Role.v  Session.v  Syntax.v  TraceEquiv.v  Tutorial.v  WellFormed.v  Zooid.v
theories/Common/: Actions.v  Alt.v  AtomSets.v  Forall.v  Member.v  Queue.v
theories/Global/: Semantics.v  Syntax.v  Tree.v  Unravel.v
theories/Local/: Semantics.v  Syntax.v  Tree.v  Unravel.v
theories/MP/: Actions.v  Atom.v  Forall.v  GLTraceEquiv.v  Global.v  LNVar.v  Local.v  Projection.v  Role.v
theories/Projection/: CProject.v  Compat.v  Correctness.v  IProject.v  PartialProj.v  QProject.v
theories/Session/: Syntax.v
theories/mpst/: Cost.v  Global.v  Local.v  Projection.v  Role.v
