; this is a bit of a hack, but it takes the implementation of comm to
; this directory in the build system
(copy_files ../../bin/comm.ml)

(executables
 (names malice mbob mcarol)
 (libraries lwt lwt.unix unix pipelineLib))

(install
 (section bin)
 (files
  (malice.exe as malice)
  (mbob.exe as mbob)
  (mcarol.exe as mcarol))
 (package zooidrt))
